tests/data/placebo/test_network_location_filter/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "c7n-test-eks-sg",
                "GroupName": "c7n-test-eks-sg",
                "IpPermissions": [],
                "OwnerId": "644160558196",
                "GroupId": "sg-093f8a75c1ecc3fd1",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "NetworkLocation",
                        "Value": "Customer"
                    }
                ],
                "VpcId": "vpc-d2d616b5"
            }
        ],
        "ResponseMetadata": {}
    }
}
