tests/data/placebo/test_network_location_filter/ec2.DescribeSubnets_1.json
{
    "status_code": 200, 
    "data": {
        "Subnets": [
            {
                "VpcId": "vpc-f1516b97", 
                "Tags": [
                    {
                        "Value": "FancyTestSubnetPrivate", 
                        "Key": "Name"
                    }, 
                    {
                        "Value": "Private", 
                        "Key": "NetworkLocation"
                    }
                ], 
                "AvailableIpAddressCount": 26, 
                "MapPublicIpOnLaunch": false, 
                "DefaultForAz": false, 
                "Ipv6CidrBlockAssociationSet": [], 
                "State": "available", 
                "AvailabilityZone": "us-east-1b", 
                "SubnetId": "subnet-6f273034", 
                "CidrBlock": "10.0.42.32/27", 
                "AssignIpv6AddressOnCreation": false
            }, 
            {
                "VpcId": "vpc-d2d616b5", 
                "AvailableIpAddressCount": 4090, 
                "MapPublicIpOnLaunch": true, 
                "DefaultForAz": true, 
                "Ipv6CidrBlockAssociationSet": [], 
                "State": "available", 
                "AvailabilityZone": "us-east-1d", 
                "SubnetId": "subnet-3a334610", 
                "CidrBlock": "172.31.48.0/20", 
                "AssignIpv6AddressOnCreation": false
            }, 
            {
                "VpcId": "vpc-d2d616b5", 
                "AvailableIpAddressCount": 4090, 
                "MapPublicIpOnLaunch": true, 
                "DefaultForAz": true, 
                "Ipv6CidrBlockAssociationSet": [], 
                "State": "available", 
                "AvailabilityZone": "us-east-1b", 
                "SubnetId": "subnet-efbcccb7", 
                "CidrBlock": "172.31.16.0/20", 
                "AssignIpv6AddressOnCreation": false
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "789ebac2-e948-4cb7-a773-c94766f989ba", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 09 May 2017 19:12:18 GMT"
            }
        }
    }
}
